<resources>
    <string name="app_name">Hyperlink Practical</string>
    <string name="enter_your_input_here">Enter your input here</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="copy_left_to_right"><![CDATA[Copy >>]]></string>
    <string name="copy_right_to_left"><![CDATA[Copy <<]]></string>
    <string name="move_left_to_right"><![CDATA[Move >>]]></string>
    <string name="move_right_to_left"><![CDATA[Move <<]]></string>
    <string name="swap"><![CDATA[<< Swap >>]]></string>
    <string name="login_intro_image">Login intro image</string>
    <string name="welcome">Welcome!</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">REGISTER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="back_arrow">Back arrow</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="_00">+00</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="meme_image">Meme image</string>
</resources>