<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context=".activities.task1.LoginActivity">

        <ImageView
            android:id="@+id/ivLoginIntro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/login_intro_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="#1E1E1E"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmailOrPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#A5A6B0"
                android:drawableEnd="@drawable/ic_email"
                android:focusable="true"
                android:hint="@string/email_or_phone"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusForward="@id/etPassword"
                android:paddingBottom="20dp"
                android:textColor="#A5A6B0"
                android:textColorHint="#A5A6B0"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#A5A6B0"
                android:drawableEnd="@drawable/ic_lock"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:textColor="#A5A6B0"
                android:textColorHint="#A5A6B0"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="#A5A6B0"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_register"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/register"
                    android:textColor="#1E1E1E" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#1E1E1E"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvTermsAndPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:textColor="#A5A6B0"
                android:textSize="12sp"
                tools:text="@string/forgot_password" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>